# silly_fastapi

./: README.md  config.json  pyproject.toml
src/: main.py  test_main.py
src/storage/db/: database.py  database_provider.py  in_memory_database.py  redis_database.py
