[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Vitor Guidi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.114.0"}
testcontainers = "^4.8.1"
pydantic = "^2.9.0"
uvicorn = "^0.30.6"
redis = "^5.0.8"
httpx = "^0.27.2"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
anyio = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
